--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
           </div>
           <div class="card p-8 hover:border-primary transition">
             <h3 class="text-xl font-bold mb-6 flex items-center">
-              <i class="fas fa-cogs text-primary mr-3"></i> Tools & QA
+              <i class="fas fa-cogs text-primary mr-3"></i> Tools
             </h3>
             <div class="flex flex-wrap gap-3">
               <span class="badge px-4 py-2 rounded-full">Git</span>
@@ -284,18 +284,18 @@
       <div class="max-w-7xl mx-auto">
         <h2 class="section-title mb-12">Featured Projects</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-          <!-- CodeStream -->
+          <!-- AI resume Builder-->
           <div class="card p-6 hover:border-primary transition">
             <div
               class="h-40 bg-gray-700 rounded-lg mb-4 overflow-hidden"
             >
               <img
-                src="images/codestream.jpg"
-                alt="CodeStream video platform interface"
+                src="images/Screenshot (54).png"
+                alt="Screenshot of AI resume Builder platform interface"
                 class="w-full h-full object-cover"
               />
             </div>
-            <h3 class="text-xl font-bold mb-2">CodeStream</h3>
+            <h3 class="text-xl font-bold mb-2">AI resume Builder--</h3>
             <p class="text-gray-400 mb-4">
               Developer-focused video platform built with React and Express.
             </p>
@@ -314,20 +314,20 @@
             </div>
           </div>
 
-          <!-- Sentiment Analysis -->
+          <!-- AI Study-Buddy -->
           <div class="card p-6 hover:border-primary transition">
             <div
               class="h-40 bg-gray-700 rounded-lg mb-4 overflow-hidden"
             >
               <img
-                src="images/sentiment-analysis.jpg"
+                src="images/image - Copy.png"
                 alt="Sentiment Analysis Dashboard"
                 class="w-full h-full object-cover"
               />
             </div>
-            <h3 class="text-xl font-bold mb-2">Sentiment Analysis Dashboard</h3>
+            <h3 class="text-xl font-bold mb-2">AI Study-Buddy</h3>
             <p class="text-gray-400 mb-4">
-              Python-powered dashboard for analyzing text sentiment.
+              Python-powered dashboard for analyzing text.
             </p>
             <div class="flex flex-wrap gap-2">
               <span class="badge px-3 py-1 rounded-full text-sm">Python</span>
@@ -344,18 +344,18 @@
             </div>
           </div>
 
-          <!-- TheJavas Chatbot -->
+          <!-- Intelligirls Chatbot -->
           <div class="card p-6 hover:border-primary transition">
             <div
               class="h-40 bg-gray-700 rounded-lg mb-4 overflow-hidden"
             >
               <img
-                src="images/chatbot.jpg"
-                alt="TheJavas Chatbot interface"
+                src="images/1719767654616.png"
+                alt="Intelligirls Chatbot interface"
                 class="w-full h-full object-cover"
               />
             </div>
-            <h3 class="text-xl font-bold mb-2">TheJavas Chatbot</h3>
+            <h3 class="text-xl font-bold mb-2">Intelligirls Chatbot</h3>
             <p class="text-gray-400 mb-4">
               Interactive chatbot built with vanilla JavaScript.
             </p>
@@ -368,7 +368,8 @@
                 href="https://github.com/cirayanga"
                 target="_blank"
                 rel="noopener"
-                class="text-primary hover:underline text-sm"
+                clas"
+                alt=s="text-primary hover:underline text-sm"
                 >View on GitHub</a
               >
             </div>
@@ -426,4 +427,5 @@
               <div class="flex items-center">
                 <div
                   class="w-12 h-12 rounded-full bg
+
 
