--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
             >
               <img
                 src="images/image - Copy.png"
-                alt="Sentiment Analysis Dashboard"
+                alt="AI Study-Buddy"
                 class="w-full h-full object-cover"
               />
             </div>
@@ -427,5 +427,6 @@
               <div class="flex items-center">
                 <div
                   class="w-12 h-12 rounded-full bg
+ull bg
 
 
