--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           >
             <!-- Replace with your profile image -->
             <img
-              src="images/profile.jpg"
+              src="/images/profile.jpg"
               alt="Yanga Cira"
               class="w-full h-full object-cover"
             />
