--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@
               class="h-40 bg-gray-700 rounded-lg mb-4 overflow-hidden"
             >
               <img
-                src="images/Screenshot (54).png"
-                alt="Screenshot of AI resume Builder platform interface"
+                src="/images/Screenshot 54.png"
+                alt=" AI resume Builder platform interface"
                 class="w-full h-full object-cover"
               />
             </div>
@@ -427,6 +427,3 @@
               <div class="flex items-center">
                 <div
                   class="w-12 h-12 rounded-full bg
-ull bg
-
-
