--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
               class="h-40 bg-gray-700 rounded-lg mb-4 overflow-hidden"
             >
               <img
-                src="images/image - Copy.png"
+                src="/images/image.png"
                 alt="AI Study-Buddy"
                 class="w-full h-full object-cover"
               />
@@ -350,7 +350,7 @@
               class="h-40 bg-gray-700 rounded-lg mb-4 overflow-hidden"
             >
               <img
-                src="images/1719767654616.png"
+                src="/images/171976765461.png"
                 alt="Intelligirls Chatbot interface"
                 class="w-full h-full object-cover"
               />
@@ -427,3 +427,4 @@
               <div class="flex items-center">
                 <div
                   class="w-12 h-12 rounded-full bg
+
