--- a/index.html
+++ b/index.html
@@ -391,40 +391,44 @@
               Have a project in mind or want to discuss opportunities? I'd love
               to hear from you!
             </p>
-            <div class="space-y-6">
-              <div class="flex items-center">
-                <div
-                  class="w-12 h-12 rounded-full bg-primary bg-opacity-20 flex items-center justify-center mr-4"
-                >
-                  <i class="fas fa-envelope text-primary"></i>
-                </div>
-                <div>
-                  <h4 class="font-bold">Email</h4>
-                  <a
-                    href="mailto:cirayanga@gmail.com"
-                    class="text-gray-400 hover:text-primary transition"
-                    >cirayanga@gmail.com</a
-                  >
-                </div>
-              </div>
-              <div class="flex items-center">
-                <div
-                  class="w-12 h-12 rounded-full bg-primary bg-opacity-20 flex items-center justify-center mr-4"
-                >
-                  <i class="fab fa-linkedin-in text-primary"></i>
-                </div>
-                <div>
-                  <h4 class="font-bold">LinkedIn</h4>
-                  <a
-                    href="https://www.linkedin.com/in/yanga-cira-5b9708186/"
-                    target="_blank"
-                    rel="noopener"
-                    class="text-gray-400 hover:text-primary transition"
-                    >www.linkedin.com/in/yanga-cira-5b9708186</a
-                  >
-                </div>
-              </div>
-              <div class="flex items-center">
-                <div
-                  class="w-12 h-12 rounded-full bg
+          <div>
+  <form action="https://formspree.io/f/yourFormID" method="POST" class="space-y-6">
+    <div>
+      <label for="name" class="block mb-2 font-medium">Name</label>
+      <input
+        type="text"
+        id="name"
+        name="name"
+        required
+        class="w-full px-4 py-3 rounded-lg bg-gray-800 text-white border border-gray-600 focus:outline-none focus:border-primary"
+      />
+    </div>
+    <div>
+      <label for="email" class="block mb-2 font-medium">Email</label>
+      <input
+        type="email"
+        id="email"
+        name="email"
+        required
+        class="w-full px-4 py-3 rounded-lg bg-gray-800 text-white border border-gray-600 focus:outline-none focus:border-primary"
+      />
+    </div>
+    <div>
+      <label for="message" class="block mb-2 font-medium">Message</label>
+      <textarea
+        id="message"
+        name="message"
+        rows="5"
+        required
+        class="w-full px-4 py-3 rounded-lg bg-gray-800 text-white border border-gray-600 focus:outline-none focus:border-primary"
+      ></textarea>
+    </div>
+    <button
+      type="submit"
+      class="btn-primary px-6 py-3 rounded-full font-medium hover:bg-primary-dark transition"
+    >
+      Send Message
+    </button>
+  </form>
+</div>
 
