--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
               class="h-40 bg-gray-700 rounded-lg mb-4 overflow-hidden"
             >
               <img
-                src="/images/image.png"
+                src="images/image.png"
                 alt="AI Study-Buddy"
                 class="w-full h-full object-cover"
               />
