--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
               class="h-40 bg-gray-700 rounded-lg mb-4 overflow-hidden"
             >
               <img
-                src="/images/Screenshot 54.png"
+                src="/images/Screenshot-54.png"
                 alt=" AI resume Builder platform interface"
                 class="w-full h-full object-cover"
               />
@@ -307,6 +307,7 @@
             <div class="mt-4 flex space-x-3">
               <a href="#" class="text-primary hover:underline text-sm"
                 >Live Demo</a
+                https://github.com/cirayanga/Resume-Builder
               >
               <a href="#" class="text-primary hover:underline text-sm"
                 >View Code</a
@@ -320,7 +321,7 @@
               class="h-40 bg-gray-700 rounded-lg mb-4 overflow-hidden"
             >
               <img
-                src="images/image.png"
+                src="/images/image-studybuddy.png"
                 alt="AI Study-Buddy"
                 class="w-full h-full object-cover"
               />
@@ -350,7 +351,7 @@
               class="h-40 bg-gray-700 rounded-lg mb-4 overflow-hidden"
             >
               <img
-                src="/images/171976765461.png"
+                src="/images/intelligirls-chatbot.png"
                 alt="Intelligirls Chatbot interface"
                 class="w-full h-full object-cover"
               />
