--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
               class="h-40 bg-gray-700 rounded-lg mb-4 overflow-hidden"
             >
               <img
-                src="/images/Screenshot-54.png"
+                src="./images/Screenshot-54.png"
                 alt=" AI resume Builder platform interface"
                 class="w-full h-full object-cover"
               />
@@ -321,7 +321,7 @@
               class="h-40 bg-gray-700 rounded-lg mb-4 overflow-hidden"
             >
               <img
-                src="/images/image-studybuddy.png"
+                src="./images/image-studybuddy.png"
                 alt="AI Study-Buddy"
                 class="w-full h-full object-cover"
               />
@@ -351,7 +351,7 @@
               class="h-40 bg-gray-700 rounded-lg mb-4 overflow-hidden"
             >
               <img
-                src="/images/intelligirls-chatbot.png"
+                src="./images/intelligirls-chatbot.png"
                 alt="Intelligirls Chatbot interface"
                 class="w-full h-full object-cover"
               />
