--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
               to hear from you!
             </p>
           <div>
-  <form action="https://formspree.io/f/yourFormID" method="POST" class="space-y-6">
+  <form action="https://formspree.io/f/xzzvbkky" method="POST" class="space-y-6">
     <div>
       <label for="name" class="block mb-2 font-medium">Name</label>
       <input
