--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
               class="h-40 bg-gray-700 rounded-lg mb-4 overflow-hidden"
             >
               <img
-                src="./images/Screenshot-54.png"
+                src="images/Screenshot-54.png"
                 alt=" AI resume Builder platform interface"
                 class="w-full h-full object-cover"
               />
@@ -315,35 +315,41 @@
             </div>
           </div>
 
-          <!-- AI Study-Buddy -->
-          <div class="card p-6 hover:border-primary transition">
-            <div
-              class="h-40 bg-gray-700 rounded-lg mb-4 overflow-hidden"
-            >
-              <img
-                src="./images/image-studybuddy.png"
-                alt="AI Study-Buddy"
-                class="w-full h-full object-cover"
-              />
-            </div>
-            <h3 class="text-xl font-bold mb-2">AI Study-Buddy</h3>
-            <p class="text-gray-400 mb-4">
-              Python-powered dashboard for analyzing text.
-            </p>
-            <div class="flex flex-wrap gap-2">
-              <span class="badge px-3 py-1 rounded-full text-sm">Python</span>
-              <span class="badge px-3 py-1 rounded-full text-sm">Streamlit</span>
-              <span class="badge px-3 py-1 rounded-full text-sm">NLTK</span>
-            </div>
-            <div class="mt-4 flex space-x-3">
-              <a href="#" class="text-primary hover:underline text-sm"
-                >Live Demo</a
-              >
-              <a href="#" class="text-primary hover:underline text-sm"
-                >View Code</a
-              >
-            </div>
-          </div>
+      <!-- AI Study-Buddy -->
+<div class="card p-6 hover:border-primary transition">
+  <div class="h-40 bg-gray-700 rounded-lg mb-4 overflow-hidden">
+    <img
+      src="./images/image-studybuddy.png"
+      alt="AI Study-Buddy"
+      class="w-full h-full object-cover"
+    />
+  </div>
+  <h3 class="text-xl font-bold mb-2">AI Study-Buddy</h3>
+  <p class="text-gray-400 mb-4">
+    Python-powered dashboard for analyzing text.
+  </p>
+  <div class="flex flex-wrap gap-2">
+    <span class="badge px-3 py-1 rounded-full text-sm">Python</span>
+    <span class="badge px-3 py-1 rounded-full text-sm">Streamlit</span>
+    <span class="badge px-3 py-1 rounded-full text-sm">NLTK</span>
+  </div>
+  <div class="mt-4 flex space-x-3">
+    <a
+      href="https://24ab56e0-b3ec-4312-8a15-43e41e726b09-00-3niwfv5c78w8c.janeway.replit.dev/"
+      target="_blank"
+      rel="noopener noreferrer"
+      class="text-primary hover:underline text-sm"
+    >Live Demo</a>
+    
+    <a
+      href="https://github.com/cirayanga/ai-studybuddy"
+      target="_blank"
+      rel="noopener noreferrer"
+      class="text-primary hover:underline text-sm"
+    >View Code</a>
+  </div>
+</div>
+
 
           <!-- Intelligirls Chatbot -->
           <div class="card p-6 hover:border-primary transition">
