--- a/index.html
+++ b/index.html
@@ -304,18 +304,16 @@
               <span class="badge px-3 py-1 rounded-full text-sm">Firebase</span>
               <span class="badge px-3 py-1 rounded-full text-sm">Express</span>
             </div>
-            <div class="mt-4 flex space-x-3">
-              <a href="#" class="text-primary hover:underline text-sm"
-                >Live Demo</a
-                https://github.com/cirayanga/Resume-Builder
-              >
-              <a href="#" class="text-primary hover:underline text-sm"
-                >View Code</a
-              >
-            </div>
-          </div>
+         <div class="mt-6 text-center">
+  <a href="https://ai-resume-builder-1-ycey.onrender.com" target="_blank" class="text-blue-600 hover:underline mr-4">
+     Live Demo
+  </a>
+  <a href="https://github.com/cirayanga/Resume-Builder/blob/main/index.html" target="_blank" class="text-blue-600 hover:underline">
+     View Code
+  </a>
+</div>
 
-      <!-- AI Study-Buddy -->
+ <!-- AI Study-Buddy -->
 <div class="card p-6 hover:border-primary transition">
   <div class="h-40 bg-gray-700 rounded-lg mb-4 overflow-hidden">
     <img
@@ -339,18 +337,15 @@
       target="_blank"
       rel="noopener noreferrer"
       class="text-primary hover:underline text-sm"
-    >Live Demo</a>
-    
+    > Live Demo</a>
     <a
-      href="https://github.com/cirayanga/ai-studybuddy"
+      href="https://github.com/cirayanga/StudyIntell/blob/main/app.py"
       target="_blank"
       rel="noopener noreferrer"
       class="text-primary hover:underline text-sm"
-    >View Code</a>
+    > View Code</a>
   </div>
 </div>
-
-
           <!-- Intelligirls Chatbot -->
           <div class="card p-6 hover:border-primary transition">
             <div
@@ -372,7 +367,7 @@
             </div>
             <div class="mt-4 flex space-x-3">
               <a
-                href="https://github.com/cirayanga"
+                href="https://github.com/cirayanga/IntelliChatBot.git"
                 target="_blank"
                 rel="noopener"
                 clas"
