--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             Software Engineer | Desktop Support Technician | AI Associate
           </h2>
           <p class="text-lg text-gray-300 mb-8 max-w-lg">
-            A Software Engineer (NQF Level 6) with hands-on experience in backend development, Python scripting, data analysis, and quality assurance. Former Desktop Support Technician, I now build accessible, clean, and secure digital solutions with a strong focus on quality and innovation.
+            A Software Engineer (NQF Level 6) with hands-on experience in backend development, Python scripting, data analysis. Former Desktop Support Technician, I now build accessible, clean, and secure digital solutions with a strong focus on quality and innovation.
           </p>
           <div class="flex space-x-4">
             <a
